--- a/api/templates/msg.html
+++ b/api/templates/msg.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}{{title}}{% endblock %}
-{% block legend_name %}信息{% endblock %}
+{% block legend_name %}information{% endblock %}
 {% block content %} 
 <div style="padding: 20px; background-color: #F2F2F2;">
   <div class="layui-row layui-col-space15">
