--- a/api/templates/show_work.html
+++ b/api/templates/show_work.html
@@ -3,6 +3,7 @@
 {% block title %}RustDesk WebUI{% endblock %}
 {% block legend_name %}{{ "综合屏" | translate }}{% endblock %}
 {% block content %}
+<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 <div style="padding: 20px; background-color: #F2F2F2;">
   <div class="layui-row layui-col-space15">
     {% if not show_all %}
@@ -10,7 +11,7 @@
       <div class="layui-card">
         <div class="layui-card-header">{{ "设备统计" | translate }} - 【{{ "用户名" | translate }}:{{u.username}}】</div>
         <div class="layui-card-body">
-          <table class="layui-table">
+          <table class="layui-table sortable">
             <thead>
               <tr>
                 <th>{{ "客户端ID" | translate }}</th>
@@ -78,7 +79,7 @@
           <div class="layui-btn" ><a href="/api/down_peers">{{ "导出xlsx" | translate }}</a></div>
         </div>
         <div class="layui-card-body">
-          <table class="layui-table">
+          <table class="layui-table sortable">
             <thead>
               <tr>
                 <th>{{ "客户端ID" | translate }}</th>
