--- a/api/templates/show_conn_log.html
+++ b/api/templates/show_conn_log.html
@@ -8,7 +8,7 @@
   <div class="layui-row layui-col-space15">
     <div class="layui-col-md15">
       <div class="layui-card">
-        <div class="layui-card-header">{{ "Connection Log" }}:{{u.username}}】</div>
+        <div class="layui-card-header">{{ "Connection Log" }}:【{{u.username}}】</div>
         <div class="layui-card-body">
           <table class="layui-table sortable">
             <thead>
