added alias to logs

--- a/api/templates/show_conn_log.html
+++ b/api/templates/show_conn_log.html
@@ -16,6 +16,7 @@
                 <th>From IP</th>
                 <th>To ID</th>
                 <th>Logged At</th>
+                <th>Alias</th>
               </tr>
             </thead>
             <tbody>
@@ -24,6 +25,7 @@
                 <td>{{one.from_ip}} </td>
                 <td>{{one.to_id}}</td>
                 <td>{{one.logged_at}}</td>
+                <td>{{one.alias}}</td>
               </tr>
               {% endfor %}
             </tbody>
