added duration to connection logs.

--- a/api/templates/show_conn_log.html
+++ b/api/templates/show_conn_log.html
@@ -13,22 +13,22 @@
           <table class="layui-table sortable">
             <thead>
               <tr>
-                <th>Action</th>
                 <th>From IP</th>
                 <th>To ID</th>
                 <th>Connection Start Time</th>
                 <th>Connection End Time</th>
+                <th>Duration (HH:MM:SS)</th>
                 <th>Alias</th>
               </tr>
             </thead>
             <tbody>
               {% for one in page_obj %}
               <tr>
-                <td>{{one.action}}</td>
                 <td>{{one.from_ip}} </td>
                 <td>{{one.rid}}</td>   
                 <td>{{one.conn_start}}</td>
                 <td>{{one.conn_end}}</td>
+                <td>{{one.duration}}</td>
                 <td>{{one.alias}}</td>
               </tr>
               {% endfor %}
