inclue user id and alias in connection logs.

--- a/api/templates/show_conn_log.html
+++ b/api/templates/show_conn_log.html
@@ -13,9 +13,11 @@
           <table class="layui-table sortable">
             <thead>
               <tr>
-                <th>From IP</th>
-                <th>To ID</th>
-                <th>Alias</th>
+                <th>User IP</th>
+                <th>User ID</th>
+                <th>User Alias</th>
+                <th>Remote ID</th>
+                <th>Remote Alias</th>
                 <th>Connection Start Time</th>
                 <th>Connection End Time</th>
                 <th>Duration (HH:MM:SS)</th>
@@ -24,7 +26,9 @@
             <tbody>
               {% for one in page_obj %}
               <tr>
-                <td>{{one.from_ip}} </td>
+                <td>{{one.from_ip}}</td>
+                <th>{{one.from_id}}</th>
+                <th>{{one.from_alias}}</th>
                 <td>{{one.rid}}</td>  
                 <td>{{one.alias}}</td> 
                 <td>{{one.conn_start}}</td>
