--- a/api/templates/show_conn_log.html
+++ b/api/templates/show_conn_log.html
@@ -27,8 +27,8 @@
               {% for one in page_obj %}
               <tr>
                 <td>{{one.from_ip}}</td>
-                <th>{{one.from_id}}</th>
-                <th>{{one.from_alias}}</th>
+                <td>{{one.from_id}}</td>
+                <td>{{one.from_alias}}</td>
                 <td>{{one.rid}}</td>  
                 <td>{{one.alias}}</td> 
                 <td>{{one.conn_start}}</td>
