--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -28,12 +28,12 @@
     </script>
 
     <ul class="layui-nav">
-        <li class="layui-nav-item"><a href="/">{% trans "首页" %}</a></li>
+        <li class="layui-nav-item"><a href="/">User Devices</a></li>
         {% if u.is_admin %}
         <li class="layui-nav-item"><a href="/api/work?show_type=admin">{% trans "所有设备" %}</a>
         </li>
         {% endif %}
-        <li class="layui-nav-item"><a href="/api/share">{% trans "分享" %}</a></li>
+        <!-- <li class="layui-nav-item"><a href="/api/share">{% trans "分享" %}</a></li> -->
         <li class="layui-nav-item"><a href="/webui" target="_blank">{% trans "网页控制" %}</a></li>
 
         {% if u.is_admin %}
