--- a/static/layui/css/layui.css
+++ b/static/layui/css/layui.css
@@ -26,6 +26,12 @@ table {
     font-family: sans-serif;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    position: relative;
+}
+
+.managedTable {
+    max-height: 500px;
+    overflow: auto;
 }
 
 thead tr {
