--- a/api/templates/show_work.html
+++ b/api/templates/show_work.html
@@ -10,8 +10,8 @@
     <div class="layui-col-md15">
       <div class="layui-card">
         <div class="layui-card-header">{{ online_count_single }}/{{page_obj.paginator.count }}: {{ "Devices Online" | translate }} - 【{{ "用户名" | translate }}:{{u.username}}】</div>
-        <div class="layui-card-body">
-          <table class="layui-table sortable managedTable">
+        <div class="layui-card-body id=managedTable">
+          <table class="layui-table sortable">
             <thead>
               <tr>
                 <th>{{ "客户端ID" | translate }}</th>
