--- a/static/layui/css/layui.css
+++ b/static/layui/css/layui.css
@@ -26,12 +26,6 @@ table {
     font-family: sans-serif;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    position: relative;
-}
-
-#managedTable {
-    max-height: 500px;
-    overflow: auto;
 }
 
 thead tr {
@@ -41,12 +35,7 @@ thead tr {
     border: 1px solid #2c8cff;
 }
 
-th {
-    padding: 12px 15px;
-    position: sticky;
-}
-
-td {
+th, td {
     padding: 12px 15px;
 }
 
