--- a/api/templates/show_conn_log.html
+++ b/api/templates/show_conn_log.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends phone_or_desktop %}
 {% load my_filters %}
 {% block title %}RustDesk WebUI{% endblock %}
 {% block legend_name %}{{ "综合屏" | translate }}{% endblock %}
