added sys_info and clients download

--- a/api/templates/base_phone.html
+++ b/api/templates/base_phone.html
@@ -66,6 +66,8 @@
                 </li>
                 <li class="layui-nav-item"><a href="/api/conn_log">Connection Log</a></li>
                 <li class="layui-nav-item"><a href="/api/file_log">File Transfer Log</a></li>
+                <li class="layui-nav-item"><a href="/api/sys_info">Server Information</a></li>
+                <li class="layui-nav-item"><a href="/api/clients">Client Downloads</a></li>
                 {% endif %}
                 <li class="layui-nav-item"><a href="/api/user_action?action=logout" target="_blank">{% trans "退出" %}</a></li>
               </ul>
