--- a/api/templates/clients.html
+++ b/api/templates/clients.html
@@ -1,7 +1,7 @@
 {% extends phone_or_desktop %}
 {% load my_filters %}
 {% block title %}RustDesk WebUI{% endblock %}
-{% block legend_name %}{{ "File Transfer Log" | translate }}{% endblock %}
+{% block legend_name %}{{ "Client Downloads" | translate }}{% endblock %}
 {% block content %}
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 <script>
