--- a/api/templates/clients.html
+++ b/api/templates/clients.html
@@ -35,7 +35,7 @@
         </tr>
         {% for filename, fileinfo in client_files.items %}
         <tr>
-            <td><a href='/download?filename={{filename}}&path={{fileinfo.path}}'>{{filename}}</a></td>
+            <td><a href='/api/download?filename={{filename}}&path={{fileinfo.path}}'>{{filename}}</a></td>
             <td>{{fileinfo.modified}}</td>
         </tr>
         {% endfor %}
