adding the client generator

--- a/api/templates/clients.html
+++ b/api/templates/clients.html
@@ -26,6 +26,7 @@
 });
 </script>
 <input type="text" id="globalSearchInput" onkeyup="globalSearch()" placeholder="Search all fields..." style="width: 200px; height: 20px; margin-bottom: 10px;">
+<a href="api/generator">Client Generator</a>
 <table class="sortable">
     <thead></thead>
     <tbody>
