--- a/api/templates/generator.html
+++ b/api/templates/generator.html
@@ -26,7 +26,7 @@
     }
 </style>
 
-<form action="/generator" method="post" enctype="multipart/form-data" class="container">
+<form action="/api/generator" method="post" enctype="multipart/form-data" class="container">
         <div class="section">
             <h2>General</h2>
                 <label for="{{ form.exename.id_for_label }}">Name for EXE file:</label>
