--- a/api/templates/generated.html
+++ b/api/templates/generated.html
@@ -3,5 +3,5 @@
 {% block title %}RustDesk WebUI{% endblock %}
 {% block legend_name %}{{ "Client Generator" | translate }}{% endblock %}
 {% block content %}
-<a href='/download?filename={{filename}}&uuid={{uuid}}'>{{filename}}</a>
+<a href='/api/download_client?filename={{filename}}&uuid={{uuid}}'>{{filename}}</a>
 {% endblock %}
