--- a/api/templates/waiting.html
+++ b/api/templates/waiting.html
@@ -7,7 +7,7 @@ Please wait...This can take 10-15 minutes (or longer if there are other users).<
 Status: {{status}}
 <script>
     setTimeout(function() {
-        window.location.replace('/check_for_file?filename={{filename}}&uuid={{uuid}}');
+        window.location.replace('/api/check_for_file?filename={{filename}}&uuid={{uuid}}');
     }, 5000); // 5000 milliseconds = 5 seconds
 </script>
 {% endblock %}
