--- a/api/templates/clients.html
+++ b/api/templates/clients.html
@@ -42,5 +42,20 @@
         {% endfor %}
     </tbody>
 </table>
+<table class="sortable">
+    <thead></thead>
+    <tbody>
+        <tr>
+            <th>File</th>
+            <th>Date</th>
+        </tr>
+        {% for filename, fileinfo in client_custom_files.items %}
+        <tr>
+            <td><a href='/api/download?filename={{filename}}&path={{fileinfo.path}}'>{{filename}}</a></td>
+            <td>{{fileinfo.modified}}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 
 {% endblock %}
