--- a/api/templates/clients.html
+++ b/api/templates/clients.html
@@ -48,6 +48,7 @@
 <a href="/api/generator">Client Generator</a>
 <div class="container">
     <div class="section">
+        <h1>Github Clients</h1>
         <table class="sortable">
             <thead></thead>
             <tbody>
@@ -65,6 +66,7 @@
         </table>
     </div>
     <div class="section">
+        <h1>Custom Clients</h1>
         <table class="sortable">
             <thead></thead>
             <tbody>
