--- a/api/templates/clients.html
+++ b/api/templates/clients.html
@@ -3,7 +3,7 @@
 {% block title %}RustDesk WebUI{% endblock %}
 {% block legend_name %}{{ "Client Downloads" | translate }}{% endblock %}
 {% block content %}
-{& if phone_or_desktop = 'base.html' %}
+{& if phone_or_desktop == 'base.html' %}
 <style>
     .container {
     display: grid;
