--- a/api/templates/generator.html
+++ b/api/templates/generator.html
@@ -65,6 +65,8 @@
         <h2>Visual</h2>
             <label for="{{ form.iconfile.id_for_label }}">Custom App Icon (in .png format)</label>
             {{ form.iconfile }}<br><br>
+            <label for="{{ form.logofile.id_for_label }}">Custom App Logo (in .png format)</label>
+            {{ form.logofile }}<br><br>
             <label for="{{ form.theme.id_for_label }}">Theme:</label>
             {{ form.theme }} {{ form.themeDorO }} *Default sets the theme but allows the client to change it, Override sets the theme permanently.<br><br>
     </div>
