--- a/api/templates/waiting.html
+++ b/api/templates/waiting.html
@@ -3,11 +3,11 @@
 {% block title %}RustDesk WebUI{% endblock %}
 {% block legend_name %}{{ "Client Generator" | translate }}{% endblock %}
 {% block content %}
-Please wait...This can take 10-15 minutes (or longer if there are other users).<br><br>
+Please wait...This can take 20-30 minutes (or longer if there are other users).<br><br>
 Status: {{status}}
 <script>
     setTimeout(function() {
-        window.location.replace('/api/check_for_file?filename={{filename}}&uuid={{uuid}}');
+        window.location.replace('/api/check_for_file?filename={{filename}}&uuid={{uuid}}&platform={{platform}}');
     }, 5000); // 5000 milliseconds = 5 seconds
 </script>
 {% endblock %}
