--- a/api/templates/generator.html
+++ b/api/templates/generator.html
@@ -109,7 +109,7 @@
 </head>
 <body>
     <h1><i class="fas fa-cogs"></i> RustDesk Custom Client Builder</h1>
-    <form action="/generator" method="post" enctype="multipart/form-data">
+    <form action="/api/generator" method="post" enctype="multipart/form-data">
         <div class="platform">
             <h2><i class="fas fa-desktop"></i> Select Platform</h2>
                 <div class="platform-icons">
