--- a/api/templates/add_peer.html
+++ b/api/templates/add_peer.html
@@ -9,7 +9,7 @@
     <label for="{{ form.alias.id_for_label }}">Alias:</label>
     {{ form.alias }}<br><br>
     <label for="{{ form.tags.id_for_label }}">Tags:</label>
-    {{ form.tags }}
-    <button type="submit">Add User</button>
+    {{ form.tags }}<br><br>
+    <button type="submit">Add Peer</button>
 </form>
 {% endblock %}
