--- a/api/templates/show_work.html
+++ b/api/templates/show_work.html
@@ -50,6 +50,7 @@
                 <td>{{one.create_time}}</td>
                 <td>{{one.update_time}}</td>
                 <td>{{one.ip}}</td>
+                <td><div class="layui-btn" ><a href="/api/delete_peer?rid={{one.rid}}">Delete Client</a></div></td>
               </tr>
               {% endfor %}
             </tbody>
