add peer from device

--- a/api/templates/add_peer.html
+++ b/api/templates/add_peer.html
@@ -12,4 +12,7 @@
     {{ form.tags }}<br><br>
     <button type="submit">Add Peer</button>
 </form>
+<script>
+    document.getElementById("{{ form.clientID.id_for_label }}").value = "{{rid}}"
+</script>
 {% endblock %}
