--- a/api/templates/show_work.html
+++ b/api/templates/show_work.html
@@ -37,7 +37,7 @@
             <tbody>
               {% for one in page_obj %}
               <tr>
-                <td><div class="layui-btn" ><a href="/api/edit_peer?rid={{one.rid}}">Edit</a></div> / <div class="layui-btn" ><a href="/api/delete_peer?rid={{one.rid}}">Delete</a></div></td>
+                <td><div class="layui-btn" ><a href="/api/edit_peer?rid={{one.rid}}">E</a></div> / <div class="layui-btn" ><a href="/api/delete_peer?rid={{one.rid}}">D</a></div></td>
                 <td><a href=rustdesk://{{one.rid}}>{{one.rid}}</a> </td>
                 <td>{{one.status}} </td>
                 <td>{{one.alias}}</td>
