--- a/api/templates/edit_peer.html
+++ b/api/templates/edit_peer.html
@@ -5,7 +5,7 @@
 {% block content %}
 {{peer.rid}}
 <form action="/api/edit_peer" method="post" enctype="multipart/form-data">
-    <input type="hidden" label="{{ form.clientID.id_for_label }}">
+    <input type="hidden" id="{{ form.clientID.id_for_label }}">
     <label for="{{ form.alias.id_for_label }}">Alias:</label>
     {{ form.alias }}<br><br>
     <label for="{{ form.tags.id_for_label }}">Tags:</label>
