--- a/api/templates/edit_peer.html
+++ b/api/templates/edit_peer.html
@@ -6,7 +6,7 @@
 {{peer.rid}}
 <form action="/api/edit_peer" method="post" enctype="multipart/form-data">
     <label for="{{ form.clientID.id_for_label }}">Client Rustdesk ID:</label>
-    {{ form.clientID }}
+    {{ form.clientID }}<br><br>
     <label for="{{ form.alias.id_for_label }}">Alias:</label>
     {{ form.alias }}<br><br>
     <label for="{{ form.tags.id_for_label }}">Tags:</label>
